--- a/index.html
+++ b/index.html
@@ -3,58 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>스펀지밥 페이지</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f0f0f0;
-        }
-        header {
-            background-color: #ffcc00;
-            color: white;
-            text-align: center;
-            padding: 10px 0;
-        }
-        nav {
-            background-color: #333;
-            padding: 10px;
-        }
-        nav a {
-            color: white;
-            margin: 0 15px;
-            text-decoration: none;
-            font-weight: bold;
-        }
-        nav a:hover {
-            text-decoration: underline;
-        }
-        main {
-            padding: 20px;
-            max-width: 1200px;
-            margin: 0 auto;
-            background-color: white;
-        }
-        footer {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 10px 0;
-            position: fixed;
-            width: 100%;
-            bottom: 0;
-        }
-    </style>
+    <title>스펀지밥 팬 페이지</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
     <header>
-        <h1>스펀지밥의 모험</h1>
+        <h1>스펀지밥 팬 페이지</h1>
     </header>
 
     <nav>
-        <a href="index.html">메인 페이지</a>
         <a href="history.html">역사 소개</a>
         <a href="directions.html">길 찾기</a>
         <a href="characters.html">등장인물</a>
@@ -62,11 +20,12 @@
     </nav>
 
     <main>
-        <!-- 페이지별 내용이 여기에 들어갑니다 -->
+        <h2>스펀지밥의 모험에 오신 것을 환영합니다!</h2>
+        <p>이 페이지는 스펀지밥에 대한 모든 정보를 제공합니다. 위의 링크를 통해 각 페이지로 이동하세요.</p>
     </main>
 
     <footer>
-        <p>© 2024 스펀지밥 팬 페이지. 모든 권리 보유.</p>
+        <p>© 밥4조 스펀지밥 팬 페이지. 모든 권리 보유.</p>
     </footer>
 
 </body>
