--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </p>
         </section>
     
-        <section>
+        <!-- <section>
             <h2>특징</h2>
             <ul>
                 <li><strong></strong> </li>
@@ -82,7 +82,7 @@
                 <li><strong></strong> </li>
                 <li><strong></strong> </li>
             </ul>
-        </section>
+        </section> -->
     
         <section>
             <h2>갤러리</h2>
