--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
         <section>
             <h2>갤러리</h2>
             <p>스펀지밥과 그의 친구들, 그리고 비키니 보텀의 멋진 순간들을 담은 갤러리를 감상해 보세요!</p>
-            <img src="images/spongebob_1.jpg" alt="스펀지밥과 패트릭" style="width:100%;max-width:600px;">
-            <img src="images/spongebob_2.jpg" alt="스펀지밥의 크랩버거" style="width:100%;max-width:600px;">
+            <img src="images/spongebob.png" alt="스펀지밥" style="width:100%;max-width:600px;">
+            <img src="images/ddungeejpg.jpg" alt="뚱이" style="width:100%;max-width:600px;">
         </section>
     </main>
     
