index.html파일 갤러리 수정

--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
         </section> -->
     
         <section>
-            <h2>갤러리</h2>
-            <p>스펀지밥과 그의 친구들, 그리고 비키니 보텀의 멋진 순간들을 담은 갤러리를 감상해 보세요!</p>
-            <img src="images/spongebob.png" alt="스펀지밥" style="width:100%;max-width:600px;">
-            <img src="images/ddungeejpg.jpg" alt="뚱이" style="width:100%;max-width:600px;">
+            <h2>스폰지밥과 뚱이</h2>
+            <p></p>
+            <img src="images/spongebob.png" alt="스펀지밥" style="width:50%;max-width:300px;">
+            <img src="images/ddungeejpg.jpg" alt="뚱이" style="width:50%;max-width:300px;">
         </section>
     </main>
     
