--- a/history.html
+++ b/history.html
@@ -43,17 +43,20 @@
         <h2>세대별 스펀지밥 소개</h2>
 
         <h3>1세대 (1999~2004)</h3>
+        <h4>총감독: 스티븐 힐렌버그</h4>
         <p>1세대 스펀지밥은 캐릭터들의 순수하고 단순한 유머가 돋보이며, 애니메이션 특유의 독특한 상상력으로 많은 사랑을 받았습니다.</p>
 
         <h3>2세대 (2005~2012)</h3>
+        <h4>총감독: 폴 티빗 </h4>
         <p>2세대에서는 이야기가 더 복잡해지며 캐릭터의 감정 표현이 더욱 풍부해졌습니다. 새로운 캐릭터와 다양한 플롯이 등장하며 시청자층도 확대되었습니다.</p>
 
         <h3>3세대 (2013~현재)</h3>
+        <h4>총감독: 마크 세카렐리 & 빈센트 월러  </h4>
         <p>3세대는 현대적인 애니메이션 스타일로 변화를 겪었으며, 에피소드의 주제가 사회적 이슈와 풍자적인 내용을 다루기도 합니다. 애니메이션의 기술적인 진보도 두드러졌습니다.</p>
     </main>
 
     <footer>
-        <p>© 밥4조 스펀지밥 팬 페이지. 모든 권리 보유.</p>
+        <p>© 2024 스펀지밥 팬 페이지. 모든 권리 [밥4조] 보유.</p>
     </footer>
 
 </body>
