--- a/characters.html
+++ b/characters.html
@@ -3,26 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>스펀지밥 페이지</title>
+    <title>스펀지밥 등장인물 소개</title>
     
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    
+    <link rel="stylesheet" href="styles.css"> 
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
-            padding: 0;
+            text-align: center;
             background-color: #f0f0f0;
         }
-        header {
+        <!-- header {
             background-color: #ffcc00;
             color: white;
             text-align: center;
-            padding: 10px 0;
-        }
+            padding: 35px 0;
+        } -->
         nav {
             background-color: #333;
-            padding: 10px;
+            padding: 10px 0;
+            text-align: center;
         }
         nav a {
             color: white;
@@ -37,6 +38,7 @@
             padding: 20px;
             max-width: 1200px;
             margin: 0 auto;
+            border-radius: 10px;
             background-color: white;
         }
         .bd-placeholder-img {
@@ -65,7 +67,7 @@
 <body>
 
     <header>
-        <h1>스펀지밥의 모험</h1>
+        <h1>스펀지밥의 등장인물</h1>
     </header>
 
     <nav>
@@ -131,9 +133,9 @@
         </div>
     </main>
 
-    <footer>
+    <!-- <footer>
         <p>© 2024 스펀지밥 팬 페이지. 모든 권리 보유.</p>
-    </footer>
+    </footer> -->
 
 </body>
 </html>
