--- a/history.html
+++ b/history.html
@@ -31,6 +31,7 @@
 
     <nav>
         <a href="index.html">메인 페이지</a>
+        <a href="index.html">역사 소개</a>
         <a href="directions.html">길 찾기</a>
         <a href="characters.html">등장인물</a>
         <a href="episodes.html">추천 에피소드</a>
