상단바 수정

--- a/characters.html
+++ b/characters.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>스펀지밥 등장인물 소개</title>
     
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <!-- <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet"> -->
     <link rel="stylesheet" href="styles.css"> 
     <style>
         body {
@@ -14,12 +14,12 @@
             text-align: center;
             background-color: #f0f0f0;
         }
-        <!-- header {
+        header {
             background-color: #ffcc00;
             color: white;
             text-align: center;
-            padding: 35px 0;
-        } -->
+            padding: 20px 0;
+        }
         nav {
             background-color: #333;
             padding: 10px 0;
@@ -132,10 +132,6 @@
               </div>
         </div>
     </main>
-
-    <!-- <footer>
-        <p>© 2024 스펀지밥 팬 페이지. 모든 권리 보유.</p>
-    </footer> -->
 
 </body>
 </html>
