--- a/directions.html
+++ b/directions.html
@@ -69,7 +69,7 @@
         <section class="map-container">
             <h2>스펀지밥의 집</h2>
             <p>아래의 지도를 통해 스펀지밥의 집 위치를 확인할 수 있습니다.</p>
-            <img src="map.jpg" alt="지도" style="width:100%;max-width:600px;">
+            <img src="/images/map.jpg" alt="지도" style="width:100%;max-width:600px;">
         </section>
     </main>
 </body>
