index.html파일 네비게이션 바 수정

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         }
         nav {
             background-color: #333;
-            padding: 10px;
+            padding: 10px 0;
+            text-align: center;
         }
         nav a {
             color: white;
@@ -91,11 +92,6 @@
             <img src="images/ddungeejpg.jpg" alt="뚱이" style="width:50%;max-width:300px;">
         </section>
     </main>
-    
-
-    <footer>
-        <p>© 2024 스펀지밥 팬 페이지. 모든 권리 보유.</p>
-    </footer>
 
 </body>
 </html>
