--- a/directions.html
+++ b/directions.html
@@ -19,7 +19,8 @@
         }
         nav {
             background-color: #333;
-            padding: 10px;
+            padding: 10px 0;
+            text-align: center;
         }
         nav a {
             color: white;
