--- a/directions.html
+++ b/directions.html
@@ -4,39 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>스펀지밥 집 찾기</title>
+    <link rel="stylesheet" href="styles.css">
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f0f0f0;
-        }
-        header, footer {
-            background-color: #ffcc00;
-            color: white;
-            text-align: center;
-            padding: 10px 0;
-        }
-        nav {
-            background-color: #333;
-            padding: 10px 0;
-            text-align: center;
-        }
-        nav a {
-            color: white;
-            margin: 0 15px;
-            text-decoration: none;
-            font-weight: bold;
-        }
-        nav a:hover {
-            text-decoration: underline;
-        }
-        main {
-            padding: 20px;
-            max-width: 1200px;
-            margin: 0 auto;
-            background-color: white;
-        }
         .map-container {
             text-align: center;
             margin: 20px 0;
@@ -46,9 +15,6 @@
             max-width: 800px;
             height: 500px;
             border: 0;
-        }
-        .info {
-            margin: 20px 0;
         }
     </style>
 </head>
